Using variables and theme colors

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/index.css">
-  <title>Sass</title>
-</head>
-<body>
-  <h1>Sass training</h1>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/index.css" />
+		<title>Sass</title>
+	</head>
+	<body>
+		<h1>This is the h1 tag</h1>
+		<a href="#">This is an encor tag</a>
+		<p class="error">this is an error</p>
+		<p class="notification">this is an error</p>
+		<button>click me</button>
+	</body>
 </html>
