--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/css/index.css" />
+		<link rel="stylesheet" href="/sass/index.css" />
 		<title>Sass</title>
 	</head>
 	<body>
-		<h1>This is the h1 tag</h1>
-		<a href="#">This is an encor tag</a>
-		<p class="error">this is an error</p>
-		<p class="notification">this is an error</p>
-		<button>click me</button>
+		<h2>card</h2>
+
+		<div class="card">
+			<h1 class="card-title">The card title</h1>
+			<p class="card-body">
+				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis,
+				exercitationem accusantium iure culpa dolorum magnam eos iusto quo
+				dignissimos consequuntur veritatis. Cupiditate molestiae aspernatur
+				expedita, natus sint voluptatem possimus veniam?
+			</p>
+		</div>
 	</body>
 </html>
